fix, #23189 : realignement choice-view icons

--- a/modules/_icons.scss
+++ b/modules/_icons.scss
@@ -29,12 +29,12 @@ i.show-details{
 }
 
 i.show-icons{
-	float: right !important;
+	float: right;
 	margin: 1px;
 }
 
 i.show-list{
-	float: right !important;
+	float: right;
 	margin: 1px;
 }
 
